[package]
name = "llmalloc"
version = "0.1.0"
authors = ["Matthieu M. <matthieum.147192@gmail.com>"]
edition = "2018"

[dependencies]

llmalloc-core = { path = "../llmalloc-core" }

[target.'cfg(target_os = "linux")'.dependencies]

libc = { version = "0.2.76", default-features = false }

[dev-dependencies]

criterion = "0.3"
num_cpus = "1.13.0"

[[bench]]

name = "benchmark"
harness = false
